k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # Numele namespace‑ului în care vom crea toate resursele aplicației
  name: bjj
